REGRESSION: [ iOS ] http/tests/resourceLoadStatistics/standalone-web-application-exempt-from-website-data-deletion tests are flaky crashing, failing an timing out. https://bugs.webkit.org/show_bug.cgi?id=211190

Patch by Alex Christensen <achristensen@webkit.org> on 2020-04-30
Reviewed by Chris Dumez.

* WebKitTestRunner/TestController.cpp:
(WTR::TestController::configureWebsiteDataStoreTemporaryDirectories):
In tests that swap out the WebsiteDataStore, don't use the same paths as the other WebsiteDataStore.

Canonical link: https://commits.webkit.org/224145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260961 268f45cc-cd09-0410-ab3c-d52691b4dbfc